syntax = "proto3";

package chat;

// 文件信息（用于消息中附加的 payload）
message FilePayload {
  string file_name = 1;   // 文件名
  int64 file_size = 2;    // 文件大小（字节）
  string file_hash = 3;   // 文件哈希值（如 SHA-256）
}

// 聊天消息
message ChatMessage {
  string sender = 1;           // 发送者 ID
  string receiver = 2;         // 接收者 ID
  int64 timestamp = 3;         // 时间戳
  string text = 4;             // 文本内容
  bool pin = 5;                // 是否置顶
  FilePayload payload = 6;     // 附带的文件信息（仅当 pin=true 时存在）
}
